README
Added detailed project description, features, requirements, and instructions for running the Chess game application.